--- a/src/dotnet/feelthemath.org/index.html
+++ b/src/dotnet/feelthemath.org/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta property="og:title" content="FEEL THE MATH - How Bernie will win the contested democratic convention." />
-    <meta property="og:image" content="https://www.feelthemath.org/images/FeelTheMath_Facebook.jpg" />
+    <meta property="og:image" content="http://www.feelthemath.org/images/FeelTheMath_Facebook.jpg" />
     <meta property="og:site_name" content="FeelTheMath.org" />
     <meta property="og:description" content="Bernie's could likely win what will almost certainly be a contested convention. BECAUSE MATH." />
 
