--- a/src/dotnet/feelthemath.org/index.html
+++ b/src/dotnet/feelthemath.org/index.html
@@ -47,7 +47,7 @@
         <span class="anton blue text-flow" style="font-size:32rem;">HILLARY</span>
         <span class="anton red text-flow" style="font-size:27rem;">WILL NOT</span>
         <span class="anton grey text-flow" style="font-size:9.4rem;">SECURE THE NOMINATION</span>
-        <span class="roboto grey disclaimer" style="font-size:2.4rem;">With the remaining states polling so well for Bernie and the upset in Indiana, it is <b>extremely unlikely that Hillary will win 70%</b> of the remaining delegates. <b>She needs 682 more delegates</b> to achieve that magic number of <b>2283</b> delegates.</span>
+        <span class="roboto grey disclaimer" style="font-size:2.4rem;">With the remaining states polling so well for Bernie and the upset in Indiana, it is <b>extremely unlikely that Hillary will win 70%</b> of the remaining delegates. <b>She needs 682 more pledged delegates</b> to achieve that magic number of <b>2283</b>.</span>
     </section>
     <section>
         <span class="anton red text-flow" style="font-size:35rem;">NO ONE</span>
@@ -58,18 +58,18 @@
     <section>
         <span class="anton red text-flow" style="font-size:42rem;">WHAT</span>
         <span class="anton blue text-flow" style="font-size:12rem;">DOES THIS MEAN?</span>
-        <span class="roboto grey disclaimer" style="font-size:2.4rem;">This means the candidates will duke it out for the majority of the delegates in a <b>contested convention</b>. The new magic number to look for is <b>2026</b>. If Bernie can achieve this number, it is much more likely he can win the nomination by securing the majority of delegates.</span>
+        <span class="roboto grey disclaimer" style="font-size:2.4rem;">This means the candidates will duke it out for the majority of the delegates in a contested convention. The new magic number to look for is <b>2026 pledged delegates</b>. If Bernie can achieve this number, it is much more likely he can <b>win the nomination</b> by securing the support of the super delegates.</span>
     </section>
     <section>
         <span class="anton blue text-flow" style="font-size:36.1rem;">BERNIE</span>
         <span class="anton red text-flow" style="font-size:13.6rem;">ONLY NEEDS 65%</span>
         <span class="anton grey text-flow" style="font-size:11.5rem;">TO GET THE MAJORITY</span>
-        <span class="roboto grey disclaimer" style="font-size:2.4rem;">If Bernie can get <b>65.5%</b> (just 612 delegates) of the remaining states, not only will he get the majority, but likely the nomination! How likely? Well all the remaining states poll in favor of Bernie. Especially California, which has <b>475</b> delgates up for grabs!</span>
+        <span class="roboto grey disclaimer" style="font-size:2.4rem;">If Bernie can get <b>65.5%</b> (just 612 delegates) of the remaining states, not only will he get the majority, but likely the nomination! How likely? All the remaining states poll in favor of Bernie. Especially California, which has <b>475</b> delgates up for grabs!</span>
     </section>
     <section>
         <span class="anton red text-flow" style="font-size:19.8rem;">WHAT ABOUT</span>
         <span class="anton BLUE text-flow" style="font-size:12.6rem;">SUPER DELEGATES?</span>
-        <span class="roboto grey disclaimer" style="font-size:2.4rem;">The media has been super misleading when it comes to the topic of super delegates. <b>Super-delegates haven't actually voted yet.</b> They typically follow the majority vote. While they CAN vote against the majority, it doesn't look good on the Democratic party… or their careers.</span>
+        <span class="roboto grey disclaimer" style="font-size:2.4rem;">The media has been super misleading when it comes to the topic of super delegates. <b>Super delegates haven't actually voted yet.</b> They typically follow the majority vote. While they CAN vote against the majority, it doesn't look good on the Democratic party… or their careers.</span>
     </section>
     <section>
         <span class="anton blue text-flow" style="font-size:8.3rem;">WHAT ARE YOU WAITING FOR?</span>
