--- a/src/dotnet/feelthemath.org/index.html
+++ b/src/dotnet/feelthemath.org/index.html
@@ -14,7 +14,7 @@
     </title>
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/content/main.css">
+    <link rel="stylesheet" href="/content/main.css?v=1">
 </head>
 
 <body>
