Added auto-tracking to outbound links

--- a/src/dotnet/feelthemath.org/index.html
+++ b/src/dotnet/feelthemath.org/index.html
@@ -15,6 +15,7 @@
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/content/main.css?v=1">
+    <script src="/scripts/autotrack.js"></script>
 </head>
 
 <body>
@@ -238,6 +239,7 @@
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-77293475-1', 'auto');
+  ga('require', 'autotrack');
   ga('send', 'pageview');
 
     </script>
