Updated anchor links

--- a/src/dotnet/feelthemath.org/index.html
+++ b/src/dotnet/feelthemath.org/index.html
@@ -47,7 +47,7 @@
         <path fill="#F15E5D" d="M1691.1 269.7h32.5l-10.4-16c-2.8-4.3-7-7.3-11.7-8.6l34.3-70.1-183.8-48.8-2.2 19.8-22.9 7c-4.8 1.5-6.8 7.1-4.1 11.3l18.9 28.5-6.8 13.9 24.2 21.7s.7-4.7 2.9-18.9-9.8-20.8-9.8-20.8l-10.1-19.3 25.3 1.6c15.6.5 17.1-18.2 17.1-18.2 30.5 28.2 67.2 62.8 112.1 47.5l-10.4 46.1c-.6 2.5-.5 5 .2 7.5l4.7 15.8z" />
     </svg>
     <svg class="share" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2230 310">
-        <text transform="translate(60 249)" fill="#CCC" font-family="'Anton'" font-size="228">SHARE THE MATH</text>
+        <text transform="translate(60 249)" fill="#CCC" class="anton" font-size="228">SHARE THE MATH</text>
         <a class="share-link" xlink:href="https://www.reddit.com/r/sandersforpresident#reddit-share" target="_blank" cursor="pointer" id="reddit">
             <circle fill="#F15D5C" cx="2070" cy="155" r="89" />
             <path fill="#FFF" d="M2133 152.7c0-8-6.1-14.1-14.1-14.1-3.7 0-7 1.4-9.8 4.2-9.8-6.6-22.5-10.3-37-10.8l7.4-24.8 20.5 5.2v.5c0 6.6 5.7 11.7 12.3 11.7 6.6 0 12-5.2 12-11.7 0-6.6-5-11.7-11.6-11.7-4.7 0-8.8 3.3-10.7 7.5l-22.9-6.1c-.9-.5-1.9.5-2.3 1.4l-8.9 27.6c-15 0-28.6 4.2-38.9 10.8-2.8-2.3-6.1-3.7-9.4-3.7-8 0-14.1 6.1-14.1 14.1 0 5.2 2.8 9.8 7 12.2-.5 1.4-.5 2.8-.5 4.7 0 20.6 25.3 37.9 56.7 37.9 31.4 0 56.7-16.9 56.7-37.9 0-1.4 0-2.8-.5-4.2 5.3-2.5 8.1-7.2 8.1-12.8zm-20.1-47.8c4.2 0 7.5 3.3 7.5 7.5s-3.3 7.5-7.5 7.5-7.5-3.3-7.5-7.5 3.2-7.5 7.5-7.5zm-99.3 56.2c-2.3-1.9-4.2-4.7-4.2-8 .5-5.6 4.7-10.3 10.3-10.3 2.3 0 4.7.9 6.1 2.3-6.2 4.7-10.4 9.9-12.2 16zm28.1 1.4c0-4.7 3.7-8.4 8.4-8.4s8.4 3.7 8.4 8.4-3.7 8.4-8.4 8.4-8.4-3.7-8.4-8.4zm47.7 24.8c-4.2 4.2-10.8 6.1-20.1 6.1s-15.9-1.9-20.1-6.1c-.9-.9-.9-1.9 0-2.8.9-.9 1.9-.9 2.8 0 3.3 3.3 8.9 5.2 17.3 5.2 8 0 14.1-1.9 17.3-5.2.9-.5 2.3-.5 2.8 0 1 .9 1 1.9 0 2.8zm-.9-16.4c-4.7 0-8.4-3.7-8.4-8.4s3.7-8.4 8.4-8.4 8.4 3.7 8.4 8.4-3.7 8.4-8.4 8.4zm36.1-9.3c-1.9-6.1-6.1-11.7-12.2-16.4 1.9-1.4 4.2-2.3 6.6-2.3 5.6 0 9.8 4.7 10.3 10.3 0 3.2-1.9 6.5-4.7 8.4z" />
@@ -62,11 +62,11 @@
         </a>
     </svg>
     <div class="spacer"></div>
-    <section>
+    <section id="hillary-will-lose">
         <span class="anton blue text-flow" style="font-size:32rem;">HILLARY</span>
         <span class="anton red text-flow" style="font-size:27rem;">WILL NOT</span>
         <span class="anton grey text-flow" style="font-size:9.4rem;">SECURE THE NOMINATION</span>
-        <span class="roboto grey disclaimer" style="font-size:2.4rem;">With the remaining states polling so well for Bernie and the upset in Indiana, it is <b>extremely unlikely that Hillary will win 72.7%</b> of the remaining delegates. <b>She needs 679 more pledged delegates</b> to achieve that magic number of <b>2283</b>.</span>
+        <span class="roboto grey disclaimer" style="font-size:2.4rem;">With the remaining states polling so well for Bernie and the upset in Indiana, it is <b>extremely unlikely that Hillary will win 72.7%</b> of the remaining delegates. <b>She needs 679 more pledged delegates</b> to achieve that magic number of <b>2383</b>.</span>
         <input class="math-box" id="math-box-1" type="checkbox" onclick="ga('send', 'event', 'plus-icon', 'click', 'Clinching Math');">
         <div class="math-container">
             <label class="math-box-label" for="math-box-1"><span class="math-label-text anton">FEEL THE MATH</span> <span class="plus-icon roboto">+</span></label>
@@ -106,13 +106,13 @@
         </div>
 
     </section>
-    <section>
+    <section id="contested-convention">
         <span class="anton red text-flow" style="font-size:35rem;">NO ONE</span>
         <span class="anton blue text-flow" style="font-size:52rem;">WILL</span>
         <span class="anton grey text-flow" style="font-size:10rem;">CLINCH THE NOMINATION</span>
         <span class="roboto grey disclaimer" style="font-size:2.4rem;">At this point, neither candidate is likely to clinch the nomination. The Democratic National Convention will almost certainly be <b>contested.</b></span>
     </section>
-    <section>
+    <section id="what-does-this-mean">
         <span class="anton red text-flow" style="font-size:42rem;">WHAT</span>
         <span class="anton blue text-flow" style="font-size:12rem;">DOES THIS MEAN?</span>
         <span class="roboto grey disclaimer" style="font-size:2.4rem;">This means the candidates will duke it out for the majority of the delegates in a contested convention. The new magic number to look for is <b>2026 pledged delegates</b>. If Bernie can achieve this number, it is much more likely he can <b>win the nomination</b> by securing the support of the superdelegates.</span>
@@ -151,7 +151,7 @@
             </svg>
         </div>
     </section>
-    <section>
+    <section id="bernie-will-win">
         <span class="anton blue text-flow" style="font-size:36.1rem;">BERNIE</span>
         <span class="anton red text-flow" style="font-size:13.6rem;">ONLY NEEDS 65%</span>
         <span class="anton grey text-flow" style="font-size:11.5rem;">TO GET THE MAJORITY</span>
