og:url specified so FB would shut up

--- a/src/dotnet/feelthemath.org/index.html
+++ b/src/dotnet/feelthemath.org/index.html
@@ -6,6 +6,7 @@
     <meta property="og:image" content="http://www.feelthemath.org/images/FeelTheMath_Facebook-v4.jpg" />
     <meta property="og:site_name" content="FeelTheMath.org" />
     <meta property="og:description" content="Bernie Sanders could still win in what will almost certainly be a contested convention. BECAUSE MATH." />
+    <meta property="og:url" content="http://www.feelthemath.org" />
     <meta property="fb:app_id" content="1166048190102756" />
 
 
