--- a/src/dotnet/feelthemath.org/index.html
+++ b/src/dotnet/feelthemath.org/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta property="og:title" content="FEEL THE MATH - How Bernie will win the contested democratic convention." />
+    <meta property="og:title" content="FEEL THE MATH - How Bernie could win the contested democratic convention." />
     <meta property="og:image" content="http://www.feelthemath.org/images/FeelTheMath_Facebook-v4.jpg" />
     <meta property="og:site_name" content="FeelTheMath.org" />
     <meta property="og:description" content="Bernie Sanders could still win in a contested convention. See the REAL math here." />
@@ -191,7 +191,7 @@
         <span class="anton blue text-flow" style="font-size:32rem;">HILLARY</span>
         <span class="anton red text-flow" style="font-size:27rem;">WILL NOT</span>
         <span class="anton grey text-flow" style="font-size:9.9rem;">CLINCH THE NOMINATION</span>
-        <span class="roboto grey disclaimer" style="font-size:2.4rem;">With the remaining states polling so well for Bernie and the upset in Indiana, it is <b>extremely unlikely that Hillary will win 74.1%</b> of the remaining delegates. <b>She needs 667 more pledged delegates</b> to achieve that magic number of <b>2383</b>.</span>
+        <span class="roboto grey disclaimer" style="font-size:2.4rem;">With the remaining states polling so well for Bernie, including the recent West Virginia blow-out, it is <b>extremely unlikely that Hillary will win 74.1%</b> of the remaining delegates. <b>She needs 667 more pledged delegates</b> to achieve that magic number of <b>2383</b>.</span>
         <input class="math-box" id="math-box-1" type="checkbox" onclick="ga('send', 'event', 'plus-icon', 'click', 'Clinching Math');">
         <div class="math-container">
             <label class="math-box-label" for="math-box-1"><span class="math-label-text anton">FEEL THE MATH</span> <span class="plus-icon roboto">+</span></label>
