--- a/src/dotnet/feelthemath.org/index.html
+++ b/src/dotnet/feelthemath.org/index.html
@@ -140,7 +140,7 @@
         <div class="math-container">
             <label class="math-box-label" for="math-box-5"><span class="math-label-text anton">FEEL THE MATH</span> <span class="plus-icon roboto">+</span></label>
             <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="90%" viewBox="0 0 450 450" font-family="Anton">
-                <path fill="none" stroke="#CCC" stroke-width="9" stroke-miterlimit="10" d="M332 323V83" />
+                <path fill="none" stroke="#CCC" stroke-width="9" d="M332 323V83" />
                 <text transform="translate(25 123.618)">
                     <tspan x="0" y="0" fill="#CCC" font-size="24" letter-spacing="194"></tspan>
                     <tspan x="200.5" y="0" fill="#1868B2" font-size="21.22">SANDERS</tspan>
@@ -191,7 +191,7 @@
         <span class="anton blue text-flow" style="font-size:32rem;">HILLARY</span>
         <span class="anton red text-flow" style="font-size:27rem;">WILL NOT</span>
         <span class="anton grey text-flow" style="font-size:9.9rem;">CLINCH THE NOMINATION</span>
-        <span class="roboto grey disclaimer" style="font-size:2.4rem;">With the remaining states polling so well for Bernie, including the recent West Virginia blow-out, it is <b>extremely unlikely that Hillary will win 74.1%</b> of the remaining delegates. <b>She needs 667 more pledged delegates</b> to achieve that magic number of <b>2383</b>.</span>
+        <span class="roboto grey disclaimer" style="font-size:2.4rem;">With the remaining states polling so well for Bernie, including the recent West Virginia blow-out, it is <b>extremely unlikely that Hillary will win 74.2%</b> of the remaining delegates. <b>She needs 666 more pledged delegates</b> to achieve that magic number of <b>2383</b>.</span>
         <input class="math-box" id="math-box-1" type="checkbox" onclick="ga('send', 'event', 'plus-icon', 'click', 'Clinching Math');">
         <div class="math-container">
             <label class="math-box-label" for="math-box-1"><span class="math-label-text anton">FEEL THE MATH</span> <span class="plus-icon roboto">+</span></label>
@@ -201,24 +201,24 @@
                     <tspan x="0" y="0" fill="#F15D5C" font-size="32.833">TO CLINCH THE</tspan>
                     <tspan x="0" y="28.7" fill="#F15D5C" font-size="32.833">NOMINATION</tspan>
                 </text>
-                <text transform="translate(200 169.62)" fill="#1868B2" text-anchor="end" font-size="73.484">-1716</text>
+                <text transform="translate(200 169.62)" fill="#1868B2" text-anchor="end" font-size="73.484">-1717</text>
                 <text transform="translate(223.852 141.963)">
                     <tspan x="0" y="0" fill="#F15D5C" font-size="32.833">PLEDGED</tspan>
                     <tspan x="0" y="28.7" fill="#F15D5C" font-size="32.833">DELEGATES</tspan>
                 </text>
-                <path fill="none" stroke="#CCC" stroke-width="9" stroke-miterlimit="10" d="M39.7 185.4h369.6" />
-                <text transform="translate(200 257.62)" fill="#1868B2" text-anchor="end" font-size="73.484">667</text>
+                <path fill="none" stroke="#CCC" stroke-width="9" d="M39.7 185.4h369.6" />
+                <text transform="translate(200 257.62)" fill="#1868B2" text-anchor="end" font-size="73.484">666</text>
                 <text transform="translate(223.852 229.963)">
                     <tspan x="0" y="0" fill="#F15D5C" font-size="32.833">NEEDED</tspan>
                     <tspan x="0" y="28.7" fill="#F15D5C" font-size="32.833">DELEGATES</tspan>
                 </text>
-                <text transform="translate(200 324.62)" fill="#1868B2" text-anchor="end" font-size="73.484">÷900</text>
+                <text transform="translate(200 324.62)" fill="#1868B2" text-anchor="end" font-size="73.484">÷897</text>
                 <text transform="translate(223.852 296.962)">
                     <tspan x="0" y="0" fill="#F15D5C" font-size="32.833">REMAINING</tspan>
                     <tspan x="0" y="28.7" fill="#F15D5C" font-size="32.833">DELEGATES</tspan>
                 </text>
-                <path fill="none" stroke="#CCC" stroke-width="9" stroke-miterlimit="10" d="M39.7 341.4h369.6" />
-                <text transform="translate(152 411.62)" fill="#1868B2" text-anchor="end" font-size="73.484">74.1</text>
+                <path fill="none" stroke="#CCC" stroke-width="9" d="M39.7 341.4h369.6" />
+                <text transform="translate(152 411.62)" fill="#1868B2" text-anchor="end" font-size="73.484">74.2</text>
                 <text transform="matrix(.583 0 0 .583 200 387.15)" fill="#1868B2" text-anchor="end" font-size="73.484">%</text>
                 <text transform="translate(223.852 383.962)">
                     <tspan x="0" y="0" fill="#F15D5C" font-size="32.833">TO CLINCH</tspan>
@@ -258,7 +258,7 @@
                 <text transform="translate(223.852 211.963)">
                     <tspan x="0" y="0" fill="#F15D5C" font-size="32.833">CANDIDATES</tspan>
                 </text>
-                <path fill="none" stroke="#CCC" stroke-width="9" stroke-miterlimit="10" d="M39.7 255.4h369.6" />
+                <path fill="none" stroke="#CCC" stroke-width="9" d="M39.7 255.4h369.6" />
                 <text transform="translate(200 327.62)" fill="#1868B2" text-anchor="end" font-size="73.484">
                     2026
                 </text>
@@ -280,7 +280,7 @@
         <span class="anton blue text-flow" style="font-size:36.1rem;">BERNIE</span>
         <span class="anton red text-flow" style="font-size:13.6rem;">ONLY NEEDS 66%</span>
         <span class="anton grey text-flow" style="font-size:11.5rem;">TO GET THE MAJORITY</span>
-        <span class="roboto grey disclaimer" style="font-size:2.4rem;">If Bernie can get <b>65.7%</b> (just 591 delegates) of the remaining states, not only will he get the majority, but likely the nomination! How likely? All the remaining states poll in favor of Bernie. Especially California, which has <b>475</b> delegates up for grabs!</span>
+        <span class="roboto grey disclaimer" style="font-size:2.4rem;">If Bernie can get <b>65.6%</b> (just 589 delegates) of the remaining states, not only will he get the majority, but likely the nomination! How likely? All the remaining states poll in favor of Bernie. Especially California, which has <b>475</b> delegates up for grabs!</span>
         <input class="math-box" id="math-box-3" type="checkbox" onclick="ga('send', 'event', 'plus-icon', 'click', 'Percentage Math');">
         <div class="math-container">
             <label class="math-box-label" for="math-box-3"><span class="math-label-text anton">FEEL THE MATH</span> <span class="plus-icon roboto">+</span></label>
@@ -293,30 +293,30 @@
                     <tspan x="0" y="28.7" fill="#F15D5C" font-size="32.833">MAJORITY</tspan>
                 </text>
                 <text transform="translate(200 169.62)" fill="#1868B2" text-anchor="end" font-size="73.484">
-                    -1435
+                    -1437
                 </text>
                 <text transform="translate(223.852 141.963)">
                     <tspan x="0" y="0" fill="#F15D5C" font-size="32.833">PLEDGED</tspan>
                     <tspan x="0" y="28.7" fill="#F15D5C" font-size="32.833">DELEGATES</tspan>
                 </text>
-                <path fill="none" stroke="#CCC" stroke-width="9" stroke-miterlimit="10" d="M39.7 185.4h369.6" />
+                <path fill="none" stroke="#CCC" stroke-width="9" d="M39.7 185.4h369.6" />
                 <text transform="translate(200 257.62)" fill="#1868B2" text-anchor="end" font-size="73.484">
-                    591
+                    589
                 </text>
                 <text transform="translate(223.852 229.963)">
                     <tspan x="0" y="0" fill="#F15D5C" font-size="32.833">NEEDED</tspan>
                     <tspan x="0" y="28.7" fill="#F15D5C" font-size="32.833">DELEGATES</tspan>
                 </text>
                 <text transform="translate(200 324.62)" fill="#1868B2" text-anchor="end" font-size="73.484">
-                    ÷900
+                    ÷897
                 </text>
                 <text transform="translate(223.852 296.962)">
                     <tspan x="0" y="0" fill="#F15D5C" font-size="32.833">REMAINING</tspan>
                     <tspan x="0" y="28.7" fill="#F15D5C" font-size="32.833">DELEGATES</tspan>
                 </text>
-                <path fill="none" stroke="#CCC" stroke-width="9" stroke-miterlimit="10" d="M39.7 341.4h369.6" />
+                <path fill="none" stroke="#CCC" stroke-width="9" d="M39.7 341.4h369.6" />
                 <text transform="translate(150 411.62)" fill="#1868B2" text-anchor="end" font-size="73.484">
-                    65.7
+                    65.6
                 </text>
                 <text transform="matrix(.583 0 0 .583 200 387.15)" fill="#1868B2" text-anchor="end" font-size="73.484">
                     %
@@ -336,8 +336,8 @@
         <span class="anton BLUE text-flow" style="font-size:12.6rem;">SUPERDELEGATES?</span>
         <span class="roboto grey disclaimer" style="font-size:2.4rem;">The media has been super misleading when it comes to the topic of superdelegates. <b> Superdelegates do not vote until the convention and do not count toward &#8220;clinching the nomination&#8221;.</b> They typically follow the majority vote. While they CAN vote against the majority, it doesn&#8217;t look good on the Democratic party&#8230; or on their own careers.</span>
     </section>
-    
-    
+
+
     <section id="call-to-action">
         <span class="anton blue text-flow" style="font-size:8.3rem;">WHAT ARE YOU WAITING FOR?</span>
         <span class="anton red text-flow" style="font-size:11.3rem;">SHARE THIS ALREADY!</span>
