--- a/src/dotnet/feelthemath.org/index.html
+++ b/src/dotnet/feelthemath.org/index.html
@@ -438,7 +438,7 @@
                         </svg>
                     </svg>
                 </svg>
-                <a class="feel-the-money-cta" xlink:href="/FeelTheMoney/">
+                <a class="feel-the-money-cta" xlink:href="/feelthemoney.html">
                     <rect x="105" y="367" width="240" height="50" fill="#F15C5C" />
                     <text x="225" y="404" font-size="31" text-anchor="middle" fill="#fff">FEEL THE MONEY</text>
                 </a>
