--- a/src/dotnet/feelthemath.org/feelthemoney.html
+++ b/src/dotnet/feelthemath.org/feelthemoney.html
@@ -15,7 +15,7 @@
     </title>
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/content/main.css?v=4">
+    <link rel="stylesheet" href="/content/main-2.css">
     <script src="/scripts/autotrack.js"></script>
 </head>
 
