--- a/src/dotnet/feelthemath.org/index.html
+++ b/src/dotnet/feelthemath.org/index.html
@@ -69,7 +69,7 @@
         <span class="anton blue text-flow" style="font-size:17.7rem;">BERNIE IS THE</span>
         <span class="anton red text-flow" style="font-size:14.1rem;">MOST FAVORABLE</span>
         <span class="anton grey text-flow" style="font-size:22.8rem;">CANDIDATE</span>
-        <span class="roboto grey disclaimer" style="font-size:2.4rem;">In an average of many polls, Bernie was polled as the most favorable candidate left in the race. Bernie&#8217;s favorability rating topped the charts at nearly <b>50%</b> compared to Hillary&#8217;s <b>38%</b> and Trump&#8217;s <b>35%</b>. Both Trump and Hillary are similarly unfavorable candidates.</span>
+        <span class="roboto grey disclaimer" style="font-size:2.4rem;">In an average of many polls, Bernie was polled as the most favorable candidate left in the race. Bernie&#8217;s favorability rating topped the charts at nearly <b>50%</b> compared to Hillary&#8217;s <b>38%</b> and Trump&#8217;s <b>35%</b>. Trump and Hillary are similarly unfavorable candidates.</span>
         <input class="math-box" id="math-box-4" type="checkbox" onclick="ga('send', 'event', 'plus-icon', 'click', 'Favorable Math');">
         <div class="math-container">
             <label class="math-box-label" for="math-box-4"><span class="math-label-text anton">FEEL THE MATH</span> <span class="plus-icon roboto">+</span></label>
@@ -136,7 +136,7 @@
         <span class="anton blue text-flow" style="font-size:35.3rem;">BERNIE</span>
         <span class="anton grey text-flow" style="font-size:19.3rem;">WILL TRUMP</span>
         <span class="anton red text-flow" style="font-size:33.3rem;">TRUMP</span>
-        <span class="roboto grey disclaimer" style="font-size:2.4rem;"><b>Bernie&#8217;s margins are almost 7X those of Clinton&#8217;s in a theoretical match-up against Trump</b>. Hillary is only polling an average 1.5% better than Trump across numerous polls. <b>In some polls she is actually losing to Trump!</b> We haven&#8217;t yet heard the last of the GOP&#8217;s attacks on Hillary&#8217;s &#8220;damn emails.&#8221; With the FBI looming over her head, a potential indictment wouldn&#8217;t only end her politcal career, but potentially taint the entire ballot. <b>We cannot allow a Trump presidency or another obstructionist congress!</b></span>
+        <span class="roboto grey disclaimer" style="font-size:2.4rem;"><b>Bernie&#8217;s margins are almost 7x those of Clinton&#8217;s in a theoretical match-up against Trump</b>. Hillary is only polling an average 1.5% better than Trump across numerous polls. <b>In some polls she is actually losing to Trump!</b> We haven&#8217;t yet heard the last of the GOP&#8217;s attacks on Hillary&#8217;s &#8220;damn emails.&#8221; With the FBI looming over her head, a potential indictment wouldn&#8217;t only end her politcal career, but potentially taint the entire ballot. <b>We cannot allow a Trump presidency or another obstructionist congress!</b></span>
         <input class="math-box" id="math-box-5" type="checkbox" onclick="ga('send', 'event', 'plus-icon', 'click', 'Favorable Math');">
         <div class="math-container">
             <label class="math-box-label" for="math-box-5"><span class="math-label-text anton">FEEL THE MATH</span> <span class="plus-icon roboto">+</span></label>
