--- a/src/dotnet/feelthemath.org/index.html
+++ b/src/dotnet/feelthemath.org/index.html
@@ -136,7 +136,7 @@
         <span class="anton blue text-flow" style="font-size:35.3rem;">BERNIE</span>
         <span class="anton grey text-flow" style="font-size:19.3rem;">WILL TRUMP</span>
         <span class="anton red text-flow" style="font-size:33.3rem;">TRUMP</span>
-        <span class="roboto grey disclaimer" style="font-size:2.4rem;"><b>Bernie&#8217;s margins are almost 7x those of Clinton&#8217;s in a theoretical match-up against Trump</b>. Hillary is only polling an average 1.5% better than Trump across numerous polls. <b>In some polls she is actually losing to Trump!</b> We haven&#8217;t yet heard the last of the GOP&#8217;s attacks on Hillary&#8217;s &#8220;damn emails.&#8221; With the FBI looming over her head, a potential indictment wouldn&#8217;t only end her politcal career, but potentially taint the entire ballot. <b>We cannot allow a Trump presidency or another obstructionist congress!</b></span>
+        <span class="roboto grey disclaimer" style="font-size:2.4rem;"><b>Bernie&#8217;s margins are almost 7x those of Clinton&#8217;s in a theoretical match-up against Trump</b>. Hillary is only polling an average 1.5% better than Trump across numerous polls. <b>In some polls she is actually losing to Trump.</b> We haven&#8217;t yet heard the last of the GOP&#8217;s attacks on Hillary&#8217;s &#8220;damn emails.&#8221; With the FBI looming over her head, a potential indictment wouldn&#8217;t only end her political career, but potentially taint the entire ballot. <b>We cannot allow a Trump presidency or another obstructionist Congress!</b></span>
         <input class="math-box" id="math-box-5" type="checkbox" onclick="ga('send', 'event', 'plus-icon', 'click', 'Favorable Math');">
         <div class="math-container">
             <label class="math-box-label" for="math-box-5"><span class="math-label-text anton">FEEL THE MATH</span> <span class="plus-icon roboto">+</span></label>
@@ -274,7 +274,7 @@
         <span class="anton blue text-flow" style="font-size:36.1rem;">BERNIE</span>
         <span class="anton red text-flow" style="font-size:13.6rem;">ONLY NEEDS 67%</span>
         <span class="anton grey text-flow" style="font-size:11.5rem;">TO GET THE MAJORITY</span>
-        <span class="roboto grey disclaimer" style="font-size:2.4rem;">If Bernie can get <b>67.4%</b> (just 527 delegates) of the remaining states, not only will he get the majority, but likely the nomination! How likely? All the remaining states poll in favor of Bernie. Oregon is still tallying votes as of Friday and he looks to be surpassing 67.5%. Also keep in mind the massive turnout in California, which has <b>527</b> delegates up for grabs!</span>
+        <span class="roboto grey disclaimer" style="font-size:2.4rem;">If Bernie can get <b>67.4%</b> (just 527 delegates) of the remaining states, not only will he get the majority, but likely the nomination! How likely? All the remaining states poll in favor of Bernie. Oregon is still tallying votes as of Friday and he looks to be surpassing 67.5%. Also keep in mind the massive turnout in California, which has <b>527</b> delegates up for grabs.</span>
         <input class="math-box" id="math-box-3" type="checkbox" onclick="ga('send', 'event', 'plus-icon', 'click', 'Percentage Math');">
         <div class="math-container">
             <label class="math-box-label" for="math-box-3"><span class="math-label-text anton">FEEL THE MATH</span> <span class="plus-icon roboto">+</span></label>
@@ -328,7 +328,7 @@
     <section id="super-delegates">
         <span class="anton red text-flow" style="font-size:19.8rem;">WHAT ABOUT</span>
         <span class="anton blue text-flow" style="font-size:13.2rem;">SUPERDELEGATES?</span>
-        <span class="roboto grey disclaimer" style="font-size:2.4rem;">The media has been super misleading when it comes to the topic of superdelegates. <b>It has been almost a year since 67% of the superdelegates pledged their allegience to Hillary.</b> This was prior to Bernie's outstanding performance in an up-hill battle against the media and the DNC. <b> Superdelegates do not vote until the convention and do not count toward &#8220;clinching the nomination&#8221;.</b> They typically will choose the best candidate to defeat the republicans.</span>
+        <span class="roboto grey disclaimer" style="font-size:2.4rem;">The media has been super misleading when it comes to the topic of superdelegates. <b>It has been almost a year since 67% of the superdelegates pledged their allegience to Hillary.</b> This was prior to Bernie's outstanding performance in an uphill battle against the media and the DNC. <b> Neither candidate will &#8220;clinch the nomination&#8221; until the superdelegates vote at the convention.</b> They typically will choose the best candidate to defeat the Republicans.</span>
     </section>
 
     <section id="call-to-action">
@@ -340,7 +340,7 @@
         <span class="anton blue text-flow" style="font-size:32.7rem;">BERNIE</span>
         <span class="anton grey text-flow" style="font-size:22rem;">IS FUNDED</span>
         <span class="anton red text-flow" style="font-size:30rem;">BY YOU!</span>
-        <span class="roboto grey disclaimer" style="font-size:2.4rem;">Bernie's average campaign contribution is <b>just $27.</b> In fact, smaller contributions of less that $200 make up <b>62% of his campaign</b>. He does not have a Super PAC like Hillary Clinton. Her Super PAC contributions exceed <b>$84.8 million</b>. This means nearly <b> 1/3 of her campaign</b> comes from corporate interests groups. Even the Koch brothers are considering funding her campaign. <b>50% of her wealthy contributors have given $2700</b>, the maximum individual contribution allowed. Of course, if you like the idea of billionaires funding elections, Trump has <b>self-funded over 72% ($43.5 Million)</b> of his entire campaign!</span>
+        <span class="roboto grey disclaimer" style="font-size:2.4rem;">Bernie's average campaign contribution is <b>just $27.</b> In fact, smaller contributions of less that $200 make up <b>62% of his campaign</b>. He does not have a super PAC like Hillary Clinton. Her super PAC contributions exceed <b>$84.8 million</b>. This means nearly <b> 1/3 of her campaign</b> comes from corporate interests groups. Even the Koch brothers are considering funding her campaign. <b>50% of her wealthy contributors have given $2700</b>, the maximum individual contribution allowed. Of course, if you like the idea of billionaires funding elections, Trump has <b>self-funded over 72% ($43.5 Million)</b> of his entire campaign!</span>
         <input class="math-box" id="math-box-6" type="checkbox" onclick="ga('send', 'event', 'plus-icon', 'click', 'Campaign Finance');">
         <div class="math-container">
             <label class="math-box-label" for="math-box-6"><span class="math-label-text anton">FEEL THE MATH</span> <span class="plus-icon roboto">+</span></label>
