--- a/src/dotnet/feelthemath.org/feelthemoney.html
+++ b/src/dotnet/feelthemath.org/feelthemoney.html
@@ -251,7 +251,7 @@
 
         <span class="text-flow anton red" style="font-size:30.6rem;">BY YOU!</span>
 
-        <span class="roboto grey disclaimer" style="font-size:2.4rem;">Bernie&#8217;s average campaign contribution is <b>just $27.</b> In fact, smaller contributions of less that $200 make up <b>62% of his campaign</b>. He does not have a Super PAC like Hillary Clinton. Her Super PAC contributions exceed <b>$84.8 million</b>. This means nearly <b> 1/3 of her campaign</b> comes from corporate interests groups. Even the Koch brothers are considering funding her campaign. <b>Nearly half of her wealthy contributors have given $2700</b>, the maximum individual contribution allowed. Of course, if you like the idea of billionaires funding elections, Trump has <b>self-funded over 72% ($43.5 Million)</b> of his entire campaign!</span>
+        <span class="roboto grey disclaimer" style="font-size:2.4rem;">Bernie's average campaign contribution is <b>just $27.</b> In fact, smaller contributions of less than $200 make up <b>62% of his campaign</b>. He does not have super PACs like Hillary Clinton. Her super PAC contributions exceed <b>$84.8 million</b>. This means nearly <b> 1/3 of her campaign</b> comes from corporate interest groups. Even the Koch brothers are considering funding her campaign. <b>50% of her wealthy contributors have given $2700</b>, the maximum individual contribution allowed.</span>
 
     </section>
 
